--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -521,7 +521,7 @@
         <div class="main-panel">
             <!-- Navbar -->
             <nav class="navbar navbar-expand-lg " color-on-scroll="500">
-                <div class="container-fluid">﻿            
+                <div class="container-fluid">            
                     <a class="navbar-brand" href="{{ path('dashboard') }}"> Tableau de bord </a>
                     <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-bar burger-lines"></span>
@@ -572,6 +572,7 @@
 
                                 </a>
                                 <div class="dropdown-menu drop-down-menu-right" aria-labelledby="navbarDropdownMenuLink" style=" right:-1px;">
+                                    <a class="dropdown-item" href="{{ path('user_profile_edit') }}">Modification profile</a>
                                     <a class="dropdown-item" href="{{ path('user_pwdreset') }}">Modification mot de passe</a>
                                     <a class="dropdown-item" href="{{ path('app_logout') }}">Se d&eacute;connecter</a>
                                 </div>
