--- a/templates/utilisateur/_form.html.twig
+++ b/templates/utilisateur/_form.html.twig
@@ -113,7 +113,7 @@
                                         </div>
                                         
                                         
-                                        <div class="row hidden">
+                                        <div class="row{% if editProfile %} d-none{% endif %}">
                                             <div class="col-md-12">
                                                 <div class="form-group">
                                                      <label></label>
