--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -109,7 +109,8 @@
                          <div class="row">
                               <div class="col-md-12">
                                         <button type="submit" class="btn btn-info btn-fill pull-right">S'identifier</button>
-                                        <a href="{{ url("forgot_password") }}" class="ml-4">Mot de passe oublié?</a>
+                                        <a href="{{ url("forgot_password") }}" class="ml-4 mr-2">Mot de passe oublié?</a> | 
+                                        <a href="{{ url("signup") }}" class="ml-2">S'inscrire</a>
                               </div>
                          </div>
                          <div class="clearfix"></div>
