Adding 'date peremption' feature

--- a/templates/base-breadcrumb.html.twig
+++ b/templates/base-breadcrumb.html.twig
@@ -14,7 +14,7 @@
                                     <h4 class="card-title {{ block('class_title_icon') }}">{% block titre %}{% endblock %}</h4>
                                     <p class="card-category">&nbsp;</p>
                                 </div>
-                                <div class="card-body table-full-width table-responsive" style="margin-left:0;">
+                                <div class="card-body table-full-width table-responsive" style="margin-left:0; overflow: visible;">
                                     {% block contenu %}
                                     {% endblock %}
                                 </div>
