--- a/templates/produit/appro.html.twig
+++ b/templates/produit/appro.html.twig
@@ -8,6 +8,10 @@
     {% include "breadcrumb.html.twig" %}
 {% endblock %}
 
+{% block block_css %}
+    <link href="/static/css/react-datepicker.min.css" rel="stylesheet" />
+{% endblock %}
+
 
 {% block contenu %}
     <script>
